--- a/enclave/sgxwasm/Cargo.toml
+++ b/enclave/sgxwasm/Cargo.toml
@@ -7,6 +7,9 @@ authors = ["The Teaclave Authors"]
 [dependencies]
 wasmi = { git = "https://github.com/mesalock-linux/wasmi-sgx" }
 wabt = { git = "https://github.com/mesalock-linux/wabt-rs-sgx", branch = "v0.9-core" }
+# parity-wasm = { git = "https://github.com/mesalock-linux/parity-wasm-sgx" }
+parity-wasm = { version = "0.41", default-features = false }
+codec = { package = "parity-scale-codec", version = "1.3.1", default-features = false, features = ["derive"] }
 serde = { git = "https://github.com/mesalock-linux/serde-sgx" }
 serde_derive = { git = "https://github.com/mesalock-linux/serde-sgx" }
 
