--- a/enclave/Cargo.toml
+++ b/enclave/Cargo.toml
@@ -14,6 +14,8 @@ default = []
 wasmi = { git = "https://github.com/mesalock-linux/wasmi-sgx" }
 serde = { git = "https://github.com/mesalock-linux/serde-sgx" }
 serde_json = { git = "https://github.com/mesalock-linux/serde-json-sgx" }
+serde_derive = { git = "https://github.com/mesalock-linux/serde-sgx" }
+codec = { package = "parity-scale-codec", version = "1.3.1", default-features = false, features = ["derive"] }
 sgxwasm = { path = "sgxwasm" }
 lazy_static = { version = "1.1.0", features = ["spin_no_std"] }
 
